name:           hpaste
version:        2.0
synopsis:       An online paste bin
description:    An online paste bin
license:        BSD3
license-file:   LICENSE
category:       Web
author:         Eric Mertens
maintainer:     emertens@gmail.com
homepage:       http://hpaste.org
build-type:     Simple
cabal-version:  >= 1.2

flag small_base
    description: Choose the new smaller, split-up base package.

executable hpastebot
    main-is:         Bot.hs
    ghc-options:     -threaded
    hs-source-dirs:  src
    build-depends:   irc,
                     Takusen

executable hpaste.fcgi
    main-is:         Main.hs
    ghc-options:     -threaded
    extensions:      PatternSignatures
    hs-source-dirs:  src
    build-depends:   fastcgi,
                     xhtml      >= 3000.0.2.1,
                     network    >= 2.1.0.0,
                     cgi        >= 3001.1.5.1,
                     utf8-string,
                     bytestring,
                     monadLib,
                     highlighting-kate >= 0.2.1,
                     Takusen

    if flag(small_base)
        build-depends: base >= 3, containers
    else
        build-depends: base < 3

