name:           hpaste
version:        2.0
synopsis:       An online paste bin
description:    An online paste bin
license:        BSD3
license-file:   LICENSE
category:       Web
author:         Eric Mertens
maintainer:     emertens@gmail.com
homepage:       http://hpaste.org
build-type:     Simple
cabal-version:  >= 1.2

flag small_base
    description: Choose the new smaller, split-up base package.

executable hpastebot
    main-is:         Bot.hs
    ghc-options:     -threaded
    hs-source-dirs:  src
    build-depends:   irc               >= 0.4,
                     Takusen           == 0.7

executable hpaste.fcgi
    main-is:         Main.hs
    ghc-options:     -threaded
    extensions:
                     DeriveDataTypeable,
                     EmptyDataDecls,
                     FlexibleInstances,
                     FunctionalDependencies,
                     GeneralizedNewtypeDeriving
                     MultiParamTypeClasses,
                     PatternGuards,
                     Rank2Types,
                     TypeOperators,
                     TypeSynonymInstances,
                     UndecidableInstances

    hs-source-dirs:  src
    build-depends:   fastcgi           >= 3001.0.1,
                     xhtml             >= 3000.0.2.1,
                     cgi               >= 3001.1.5.1,
                     network           >= 2.1.0.0,
                     utf8-string       >= 0.2,
                     old-locale        >= 1.0.0.0,
                     time              >= 1.1.2.0,
                     monadLib          >= 3.4.4,
                     bytestring        >= 0.9.0.1,
                     highlighting-kate >= 0.2.1,
                     Takusen           == 0.7,
                     -- because of cgi:
                     mtl

    if flag(small_base)
        build-depends: base >= 3, containers
    else
        build-depends: base < 3

